style: migrate to markdown comments