@@ -6,63 +6,27 @@ import org.jetbrains.annotations.NotNull;
 
 import java.time.Duration;
 
-/**
- * ConfigLib-compatible database configuration class.
- *
- * <p>This class can be embedded in your plugin's configuration to provide
- * database connection settings. It uses ConfigLib annotations for YAML
- * serialization with helpful comments.
- *
- * <p>Example usage in a plugin configuration:
- * <pre>{@code
- * @Configuration
- * public class PluginConfig {
- *     @Comment("Database connection settings")
- *     private DatabaseConfig database = new DatabaseConfig();
- *
- *     public DatabaseConfig database() {
- *         return database;
- *     }
- * }
- * }</pre>
- *
- * <p>This will generate a YAML file like:
- * <pre>{@code
- * # Database connection settings
- * database:
- *   # The database server hostname or IP address
- *   host: localhost
- *   # The database server port
- *   port: 3306
- *   # The name of the database to connect to
- *   database: minecraft
- *   # The username for database authentication
- *   username: root
- *   # The password for database authentication
- *   password: ""
- *   # Connection timeout in seconds
- *   connectionTimeoutSeconds: 5
- *   # Maximum number of connections in the pool (for HikariCP)
- *   maxPoolSize: 10
- *   # Minimum number of idle connections in the pool (for HikariCP)
- *   minIdle: 2
- * }</pre>
- *
- * <p>To use with the database utilities, convert to {@link DatabaseCredentials}:
- * <pre>{@code
- * DatabaseCredentials credentials = config.database().toCredentials();
- * try (Connection conn = MariaDbConnectionFactory.openConnection(credentials)) {
- *     // use connection
- * }
- *
- * // Or use with HikariCP:
- * HikariDataSource dataSource = HikariDataSourceBuilder.create(config.database());
- * }</pre>
- *
- * @see DatabaseCredentials
- * @see MariaDbConnectionFactory
- * @see HikariDataSourceBuilder
- */
+/// ConfigLib-compatible database configuration class.
+///
+/// This class can be embedded in your plugin's configuration to provide
+/// database connection settings. It uses ConfigLib annotations for YAML
+/// serialization with helpful comments.
+///
+/// Example usage in a plugin configuration:
+/// <pre>
+/// `class PluginConfig{settings")private DatabaseConfig database = new DatabaseConfig();public DatabaseConfig database(){return database;}}`</pre>
+///
+/// This will generate a YAML file like:
+/// <pre>
+/// `# Database connection settingsdatabase:# The database server hostname or IP addresshost: localhost# The database server portport: 3306# The name of the database to connect todatabase: minecraft# The username for database authenticationusername: root# The password for database authenticationpassword: ""# Connection timeout in secondsconnectionTimeoutSeconds: 5# Maximum number of connections in the pool (for HikariCP)maxPoolSize: 10# Minimum number of idle connections in the pool (for HikariCP)minIdle: 2`</pre>
+///
+/// To use with the database utilities, convert to [DatabaseCredentials]:
+/// <pre>
+/// `DatabaseCredentials credentials = config.database().toCredentials();try (Connection conn = MariaDbConnectionFactory.openConnection(credentials)){// use connection}// Or use with HikariCP:HikariDataSource dataSource = HikariDataSourceBuilder.create(config.database());`</pre>
+///
+/// @see DatabaseCredentials
+/// @see MariaDbConnectionFactory
+/// @see HikariDataSourceBuilder
 @Configuration
 public class DatabaseConfig {
 
@@ -90,22 +54,18 @@ public class DatabaseConfig {
     @Comment("Minimum number of idle connections in the pool (for HikariCP)")
     private int minIdle = 2;
 
-    /**
-     * Creates a new DatabaseConfig with default values.
-     */
+    /// Creates a new DatabaseConfig with default values.
     public DatabaseConfig() {
         // Default constructor required by ConfigLib
     }
 
-    /**
-     * Creates a new DatabaseConfig with specified values.
-     *
-     * @param host     the database host
-     * @param port     the database port
-     * @param database the database name
-     * @param username the username
-     * @param password the password
-     */
+    /// Creates a new DatabaseConfig with specified values.
+    ///
+    /// @param host     the database host
+    /// @param port     the database port
+    /// @param database the database name
+    /// @param username the username
+    /// @param password the password
     public DatabaseConfig(String host, int port, String database, String username, String password) {
         this.host = host;
         this.port = port;
@@ -114,14 +74,12 @@ public class DatabaseConfig {
         this.password = password;
     }
 
-    /**
-     * Converts this configuration to a {@link DatabaseCredentials} instance.
-     *
-     * <p>This is the recommended way to use the configuration with
-     * {@link MariaDbConnectionFactory} or {@link HikariDataSourceBuilder}.
-     *
-     * @return a new DatabaseCredentials instance
-     */
+    /// Converts this configuration to a [DatabaseCredentials] instance.
+    ///
+    /// This is the recommended way to use the configuration with
+    /// [MariaDbConnectionFactory] or [HikariDataSourceBuilder].
+    ///
+    /// @return a new DatabaseCredentials instance
     public @NotNull DatabaseCredentials toCredentials() {
         return DatabaseCredentials.builder()
                 .host(host)
@@ -133,84 +91,66 @@ public class DatabaseConfig {
                 .build();
     }
 
-    /**
-     * Returns the database server hostname or IP address.
-     *
-     * @return the host
-     */
+    /// Returns the database server hostname or IP address.
+    ///
+    /// @return the host
     public String host() {
         return host;
     }
 
-    /**
-     * Returns the database server port.
-     *
-     * @return the port
-     */
+    /// Returns the database server port.
+    ///
+    /// @return the port
     public int port() {
         return port;
     }
 
-    /**
-     * Returns the name of the database to connect to.
-     *
-     * @return the database name
-     */
+    /// Returns the name of the database to connect to.
+    ///
+    /// @return the database name
     public String database() {
         return database;
     }
 
-    /**
-     * Returns the username for database authentication.
-     *
-     * @return the username
-     */
+    /// Returns the username for database authentication.
+    ///
+    /// @return the username
     public String username() {
         return username;
     }
 
-    /**
-     * Returns the password for database authentication.
-     *
-     * @return the password
-     */
+    /// Returns the password for database authentication.
+    ///
+    /// @return the password
     public String password() {
         return password;
     }
 
-    /**
-     * Returns the connection timeout in seconds.
-     *
-     * @return the connection timeout in seconds
-     */
+    /// Returns the connection timeout in seconds.
+    ///
+    /// @return the connection timeout in seconds
     public int connectionTimeoutSeconds() {
         return connectionTimeoutSeconds;
     }
 
-    /**
-     * Returns the maximum pool size for HikariCP.
-     *
-     * @return the maximum pool size
-     */
+    /// Returns the maximum pool size for HikariCP.
+    ///
+    /// @return the maximum pool size
     public int maxPoolSize() {
         return maxPoolSize;
     }
 
-    /**
-     * Returns the minimum number of idle connections for HikariCP.
-     *
-     * @return the minimum idle connections
-     */
+    /// Returns the minimum number of idle connections for HikariCP.
+    ///
+    /// @return the minimum idle connections
     public int minIdle() {
         return minIdle;
     }
 
-    /**
-     * Constructs the JDBC URL for MariaDB connections.
-     *
-     * @return the JDBC URL string
-     */
+    /// Constructs the JDBC URL for MariaDB connections.
+    ///
+    /// @return the JDBC URL string
     public String jdbcUrl() {
-        return String.format("jdbc:mariadb://%s:%d/%s", host, port, database);
+        return "jdbc:mariadb://%s:%d/%s".formatted(host, port, database);
     }
 }
